--- a/core/rs/config/changelog.txt
+++ b/core/rs/config/changelog.txt
@@ -1,3 +1,5 @@
+3.0.309
+    Изменена подсистема лицензирования, добавлена возможность создавать тестовый сайт для разработки на поддомене dev.ВАШ-ОСНОВНОЙ-ДОМЕН
 3.0.308
     Улучшен код модуля
 3.0.307
