--- a/modules/catalog/config/changelog.txt
+++ b/modules/catalog/config/changelog.txt
@@ -1,3 +1,5 @@
+3.0.54
+    Исправлена незначительная ошибка в блоке ТОП продуктов
 3.0.53
     Исправлена ошибка, связанная с массовым редактированием поля "Характеристики в списке" в категории
     Исправлена незначительная ошибка, связанная с характеристиками
