--- a/modules/main/config/changelog.txt
+++ b/modules/main/config/changelog.txt
@@ -1,3 +1,6 @@
+3.0.23
+    Добавлен виджет "Лучшие предложения"
+    Добавлена возможность отключения виджетов с помощью свойства \Setup::$DISABLE_WIDGETS
 3.0.21
     Улучшен код модуля
 3.0.20
