--- a/modules/shop/config/changelog.txt
+++ b/modules/shop/config/changelog.txt
@@ -1,3 +1,6 @@
+3.0.65
+    Добавлена возможность производить экспорт заказанных товаров в CSV
+    Обновлен модуль Яндекс.Кассы
 3.0.63
     Добавили возможность повторно выбивать чеки у ошибочных транзакций
 3.0.62
