--- a/modules/users/config/changelog.txt
+++ b/modules/users/config/changelog.txt
@@ -1,3 +1,5 @@
+3.0.21
+    Добавили копирование прав для групп пользователей при создании мультисайта
 3.0.20
     Исправлена ошибка, связанная с фильтрацией пользователей по типу цен
 3.0.19
